--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,36 @@
-./article_app/build/
-./article_lib/build/
-./service_article/build/
-./service_crawler/build/
-./service_eureka/build/
-./service_user/build/
-./service_zuul/build/
+/article_app/build/
+/article_app/out/
+/article_app/.idea/
+/article_app/.gradle/
+
+/article_lib/build/
+/article_lib/out/
+/article_lib/.idea/
+/article_lib/.gradle/
+
+/service_article/build/
+/service_article/out/
+/service_article/.idea/
+/service_article/.gradle/
+
+/service_crawler/build/
+/service_crawler/out/
+/service_crawler/.idea/
+/service_crawler/.gradle/
+
+/service_eureka/build/
+/service_eureka/out/
+/service_eureka/.idea/
+/service_eureka/.gradle/
+
+/service_user/build/
+/service_user/out/
+/service_user/.idea/
+/service_user/.gradle/
+
+/service_zuul/build/
+/service_zuul/out/
+/service_zuul/.idea/
+/service_zuul/.gradle/
+
+*.log
