--- a/article_app/build.gradle
+++ b/article_app/build.gradle
@@ -31,6 +31,10 @@ repositories {
     mavenCentral()
 }
 
+springBoot{
+    executable=true
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web:1.5.6.RELEASE'
     compile "org.springframework.boot:spring-boot-starter-thymeleaf"
