--- a/article_app/build.gradle
+++ b/article_app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile "com.google.guava:guava:22.0"
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.alibaba:fastjson:1.2.35'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
