--- a/service_article/build.gradle
+++ b/service_article/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0"
     compile 'com.alibaba:fastjson:1.2.35'
     compile "mysql:mysql-connector-java:5.1.34"
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile "org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
