--- a/service_crawler/build.gradle
+++ b/service_crawler/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile "mysql:mysql-connector-java:5.1.34"
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'org.jsoup:jsoup:1.10.3'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile "org.springframework.boot:spring-boot-starter-test:1.5.2.RELEASE"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
