--- a/service_eureka/build.gradle
+++ b/service_eureka/build.gradle
@@ -44,5 +44,6 @@ dependencyManagement{
 
 dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-eureka-server:1.3.1.RELEASE'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
