--- a/service_zuul/build.gradle
+++ b/service_zuul/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile project(":..:article_lib")
     compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
     compile 'org.springframework.cloud:spring-cloud-starter-zuul:1.3.1.RELEASE'
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
